--- a/index.html
+++ b/index.html
@@ -11,26 +11,24 @@
 
     <body>
         <div class="content-wrapper">
-            <div id="NavBar">
+            <div id="root">
                 <div class="home-page" id="home">
                     <img id="andre-header-photo" src="images/AndreExtendedCrop.png">
                     <div class="first-header">
                         <h1>ANDRÉ 3000</h1>
                         <p>rapper, singer, musician,</br> songwriter, record</br> producer, Designer,</br> actor, flutist</p>
                     </div>
-
                 </div>
                 <div class="slider-one" id="music">
                     <p>Blabala</p>
                 </div>
-                <div class="slider-two" id="music">
+                <div class="slider-two" id="acting">
                     <p>Blabala</p>
                 </div>
-                <div class="slider-three" id="music">
+                <div class="slider-three" id="eras">
                     <p>Blabala</p>
                 </div>
             </div>
-
         </div>
     </body>
 
