--- a/index.html
+++ b/index.html
@@ -7,29 +7,56 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <title>ANDRÉ 3000</title>
+        <style>
+            html {
+                scroll-behavior: smooth;
+            }  
+        </style>
     </head>
 
     <body>
         <div class="content-wrapper">
-            <div id="root">
-                <div class="home-page" id="home">
-                    <img id="andre-header-photo" src="images/AndreExtendedCrop.png">
-                    <div class="first-header">
-                        <h1>ANDRÉ 3000</h1>
-                        <p>rapper, singer, musician,</br> songwriter, record</br> producer, Designer,</br> actor, flutist</p>
+            <div id="nav-center">
+                <div id="navbar">
+                    <a href="#home" id="left">ANDRÉ 3000</a>
+                    <div id="navbar-right">
+                        <a href="#music">MUSIC</a>
+                        <a href="#acting">ACTING</a>
+                        <a href="#eras">ERAS</a>
                     </div>
                 </div>
-                <div class="slider-one" id="music">
-                    <p>Blabala</p>
-                </div>
-                <div class="slider-two" id="acting">
-                    <p>Blabala</p>
-                </div>
-                <div class="slider-three" id="eras">
-                    <p>Blabala</p>
+            </div>
+            <div class="home-page" id="home">
+                <img id="andre-header-photo" src="images/AndreExtendedCrop.png">
+                <div class="first-header">
+                    <h1>ANDRÉ 3000</h1>
+                    <p>rapper, singer, musician,</br> songwriter, record</br> producer, Designer,</br> actor, flutist</p>
                 </div>
             </div>
+            <div class="slider-one" id="music">
+                <p>Blabala</p>
+            </div>
+            <div class="slider-two" id="acting">
+                <p>Blabala</p>
+            </div>
+            <div class="slider-three" id="eras">
+                <p>Bla</p>
+            </div>
         </div>
+        <script>
+            window.onscroll = function() {myFunction()};
+            var navbar = document.getElementById("navbar");
+
+            var sticky = navbar.offsetTop;
+
+            function myFunction() {
+                if (window.pageYOffset >= sticky) {
+                    navbar.classList.add("sticky")
+                } else {
+                    navbar.classList.remove("sticky");
+                }
+            }
+        </script>
     </body>
 
 </html>
