First page basically done with nav, added second page draft.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div class="content-wrapper">
             <div id="nav-center">
                 <div id="navbar">
-                    <a href="#home" id="left">ANDRÉ 3000</a>
+                    <a href="#home" id="left">
+                        ANDRÉ 3000</a>
                     <div id="navbar-right">
                         <a href="#music">MUSIC</a>
                         <a href="#acting">ACTING</a>
@@ -34,7 +35,11 @@
                 </div>
             </div>
             <div class="slider-one" id="music">
-                <p>Blabala</p>
+                <div id="text-slider-one">
+                    <h1>Formation of Outkast</h1>
+                    <h2>(1992-94)</h2>
+                    <p>Alongside Big Boi (Antwan André Patton,) ANDRE 3000 formed OutKast in the early 1990s. Their debut album, "Southernplayalisticadillacmuzik", introduced Andre's unique flow and inventive wordplay, blending Southern hip-hop with funk and soul influences.</p>
+                </div>
             </div>
             <div class="slider-two" id="acting">
                 <p>Blabala</p>
@@ -43,20 +48,6 @@
                 <p>Bla</p>
             </div>
         </div>
-        <script>
-            window.onscroll = function() {myFunction()};
-            var navbar = document.getElementById("navbar");
-
-            var sticky = navbar.offsetTop;
-
-            function myFunction() {
-                if (window.pageYOffset >= sticky) {
-                    navbar.classList.add("sticky")
-                } else {
-                    navbar.classList.remove("sticky");
-                }
-            }
-        </script>
     </body>
 
 </html>
