Added initial fade slide

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </div>
             </div>
             <div class="slider-one" id="music">
+                <div id="fade-box"></div>
                 <div id="text-slider-one">
                     <h1>Formation of Outkast</h1>
                     <h2>(1992-94)</h2>
