--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                     <p>rapper, singer, musician,</br> songwriter, record</br> producer, Designer,</br> actor, flutist</p>
                 </div>
             </div>
-            <div class="slider-one" id="music">
-                <div id="fade-box"></div>
-                <div id="text-slider-one">
-                    <h1>Formation of Outkast</h1>
+            <div class="temp-slider" id="music">
+                <div class="temp-text">
+                    <h1>Temp</h1>
+                    <!--<h1>Formation of Outkast</h1>
                     <h2>(1992-94)</h2>
-                    <p>Alongside Big Boi (Antwan André Patton,) ANDRE 3000 formed OutKast in the early 1990s. Their debut album, "Southernplayalisticadillacmuzik", introduced Andre's unique flow and inventive wordplay, blending Southern hip-hop with funk and soul influences.</p>
+                    <p>Alongside Big Boi (Antwan André Patton,) ANDRE 3000 formed OutKast in the early 1990s. Their debut album, "Southernplayalisticadillacmuzik", introduced Andre's unique flow and inventive wordplay, blending Southern hip-hop with funk and soul influences.</p> -->
                 </div>
             </div>
             <div class="slider-two" id="acting">
@@ -50,5 +50,6 @@
             </div>
         </div>
     </body>
+    <script>index.js</script>
 
 </html>
