Pages added, slides bugged out so temporarily out

--- a/index.html
+++ b/index.html
@@ -34,22 +34,83 @@
                     <p>rapper, singer, musician,</br> songwriter, record</br> producer, Designer,</br> actor, flutist</p>
                 </div>
             </div>
-            <div class="temp-slider" id="music">
-                <div class="temp-text">
-                    <h1>Temp</h1>
-                    <!--<h1>Formation of Outkast</h1>
-                    <h2>(1992-94)</h2>
-                    <p>Alongside Big Boi (Antwan André Patton,) ANDRE 3000 formed OutKast in the early 1990s. Their debut album, "Southernplayalisticadillacmuzik", introduced Andre's unique flow and inventive wordplay, blending Southern hip-hop with funk and soul influences.</p> -->
+            <!-- <div class="scroll" id="music"> -->
+                <div class="slider-one">
+                    <div class="text-slider-one">
+                        <h1>Formation of Outkast</h1>
+                        <h2>(1992-1994)</h2>
+                        <p>Alongside Big Boi (Antwan André Patton,) ANDRE 3000 formed OutKast in the early 1990s. Their debut album, "Southernplayalisticadillacmuzik", introduced Andre's unique flow and inventive wordplay, blending Southern hip-hop with funk and soul influences.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="slider-two" id="acting">
-                <p>Blabala</p>
-            </div>
-            <div class="slider-three" id="eras">
-                <p>Bla</p>
-            </div>
+                <div class="slider-two">
+                    <div class="text-slider-two">
+                        <h1>Rise to Prominence</h1>
+                        <h2>(1995-1998)</h2>
+                        <p>OutKast's sophomore album, "ATLiens" (1996), showcased Andre's lyrical prowess and marked their transition to a more experimental sound. The follow-up, "Aquemini" (1998), further solidified their status as hip-hop innovators, with Andre's creativity shining through diverse tracks like "Rosa Parks" and "SpottieOttieDopaliscious."</p>
+                    </div>
+                </div>
+                <div class="slider-three">
+                    <div class="text-slider-three">
+                        <h1>Mainstream Success and Critical Acclaim</h1>
+                        <h2>(1999-2005)</h2>
+                        <p>With the release of "Stankonia" (2000), OutKast achieved mainstream success and critical acclaim. Andre 3000's contributions to hits like "Ms. Jackson" and "B.O.B. (Bombs Over Baghdad)" showcased his versatility and elevated the duo's status in the music industry.</p>
+                    </div>
+                    <div class="img-container">
+                        <img id="andre-stank" src="images/81rFN+3o2xL 1.png">
+                    </div>
+                </div>
+                <div class="slider-four">
+                    <div class="text-slider-four">
+                        <h1>Continued Influence and Legacy</h1>
+                        <h2>(2006-Present)</h2>
+                        <p>Despite maintaining a relatively low profile in recent years, Andre 3000's influence on hip-hop remains undeniable. His collaborations and guest appearances attest to his enduring relevance, while his contributions to OutKast's groundbreaking discography solidify his legacy as one of the genre's most innovative and influential figures.</p>
+                    </div>
+                </div>
+
+                <!-- <div class="scroll2" id="acting"> -->
+                <div class="two-slider-one">
+                    <div class="two-text-slider-one">
+                        <h1>Early Acting Roles</h1>
+                        <h2>(2005-2006)</h2>
+                        <p>In the mid-2000s, Andre 3000 began his foray into acting with roles in films such as "Four Brothers" (2005) and "Be Cool" (2005). These  appearances showcased his versatility as an artist beyond music, earning him praise for his natural on-screen presence and charisma.</p>
+                    </div>
+                </div>
+                <div class="two-slider-two">
+                    <div class="two-text-slider-two">
+                        <h1>Breakthrough Performance in "Idlewild"</h1>
+                        <h2>(2006)</h2>
+                        <p>Andre 3000's breakthrough role came with "Idlewild" (2006), a musical drama where he starred alongside Big Boi, his OutKast counterpart. Portraying the character of Percival, Andre's performance was lauded for its depth and emotional resonance, solidifying his status as a multi-talented entertainer.</p>
+                    </div>
+                </div>
+                <div class="two-slider-three">
+                    <div class="two-text-slider-three">
+                        <h1>Continued Acting Career</h1>
+                        <h2>(2007-Present)</h2>
+                        <p>Andre 3000 has continued to explore acting, albeit with fewer roles compared to his music career. He has appeared in films such as "Semi-Pro" (2008) and "Jimi: All Is by My 
+                            Side" (2013), showcasing his range as an actor 
+                            and further establishing himself as a respected 
+                            figure in both the music and film industries.</p>
+                    </div>
+                </div>
+
+
+                <div class="footer">
+                    <h3><span style="font-family: Gotham-Bold;">Dan Warnick </span></br>
+                        DES 070</br>
+                        Spring 2024</h3>
+                </div>
         </div>
+        <script>
+            document.addEventListener('keydown', function(event) {
+                const scrollElement = document.getElementById('music');
+                const scrollAmount = 200; // Adjust this value to change scroll speed
+                if (event.key === 'ArrowLeft') {
+                    scrollElement.scrollLeft -= scrollAmount; // Scroll left
+                } else if (event.key === 'ArrowRight') {
+                    scrollElement.scrollLeft += scrollAmount; // Scroll right
+                }
+            });
+        </script>
     </body>
-    <script>index.js</script>
 
 </html>
