--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <div class="scroll" id="eras">
                 <div class="slider-container">
-                    <div class="sliders" >
+                    <div class="sliders" style="background-image: url(../images/meh4.jpg); background-position-y: bottom;">
                         <div class="two-text-slider-three">
                             <h1>Early OutKast Style</h1>
                             <h2>(1990s)</h2>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="slider-container">
                     <div class="sliders">
-                        <div class="two-text-slider-three">
+                        <div class="two-text-slider-two">
                             <h1>Experimental Evolution</h1>
                             <h2>(2000s)</h2>
                             <p>Transitioning into the 2000s, Andre 3000's style became avant-garde and boundary-pushing, mixing retro-futurism with vintage flair and high fashion collaborations, solidifying his status as a fashion icon.</p>
