--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders">
-                        <div class="two-text-slider-two">
+                    <div class="sliders" style="background-image: url(../images/meh5.jpg); background-position-y: bottom;">
+                        <div class="two-text-slider-two" >
                             <h1>Experimental Evolution</h1>
                             <h2>(2000s)</h2>
                             <p>Transitioning into the 2000s, Andre 3000's style became avant-garde and boundary-pushing, mixing retro-futurism with vintage flair and high fashion collaborations, solidifying his status as a fashion icon.</p>
@@ -129,8 +129,8 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders">
-                        <div class="two-text-slider-three">
+                    <div class="sliders" style="background-image: url(../images/meh6.jpg); background-position-y: bottom;">
+                        <div class="two-text-slider-two" >
                             <h1>Minimalistic</h1>
                             <h2>(2010s-Present)</h2>
                             <p>In the 2010s and beyond, Andre 3000's style has embraced a refined and minimalist approach, featuring clean lines, monochromatic palettes, and timeless silhouettes, while still retaining an essence of his signature flair.</p>
