--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="scroll" id="music">
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/outkast31.jpg); background-position-y: bottom;">
+                    <div class="sliders" style="background-image: url(images/outkast31.jpg); background-position-y: bottom;">
                         <div class="text-slider-one">
                             <h1>Formation of Outkast</h1>
                             <h2>(1992-1994)</h2>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/meh\ 1.jpg); background-position-y: bottom;">
+                    <div class="sliders" style="background-image: url(images/meh\ 1.jpg); background-position-y: bottom;">
                         <div class="text-slider-two">
                             <h1>Rise to Prominence</h1>
                             <h2>(1995-1998)</h2>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/stankempty\ 1.jpg);">
+                    <div class="sliders" style="background-image: url(images/stankempty\ 1.jpg);">
                         <div class="text-slider-three">
                             <h1>Mainstream Success and Critical Acclaim</h1>
                             <h2>(1999-2005)</h2>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/grass\ 1.jpg);">
+                    <div class="sliders" style="background-image: url(images/grass\ 1.jpg);">
                         <div class="text-slider-four">
                             <h1>Continued Influence and Legacy</h1>
                             <h2>(2006-Present)</h2>
@@ -78,7 +78,7 @@
 
             <div class="scroll" id="acting">
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/meh3\ 1.jpg);">
+                    <div class="sliders" style="background-image: url(images/meh3\ 1.jpg);">
                         <div class="two-text-slider-one">
                             <h1>Early Acting Roles</h1>
                             <h2>(2005-2006)</h2>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/meh2\ 1.jpg); background-position-y: bottom;">
+                    <div class="sliders" style="background-image: url(images/meh2\ 1.jpg); background-position-y: bottom;">
                         <div class="two-text-slider-two">
                             <h1>Breakthrough Performance in "Idlewild"</h1>
                             <h2>(2006)</h2>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/Acting\ 1.jpg);">
+                    <div class="sliders" style="background-image: url(images/Acting\ 1.jpg);">
                         <div class="two-text-slider-three">
                             <h1>Continued Acting Career</h1>
                             <h2>(2007-Present)</h2>
@@ -111,7 +111,7 @@
 
             <div class="scroll" id="eras">
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/meh4.jpg); background-position-y: bottom;">
+                    <div class="sliders" style="background-image: url(images/meh4.jpg); background-position-y: bottom;">
                         <div class="two-text-slider-three">
                             <h1>Early OutKast Style</h1>
                             <h2>(1990s)</h2>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/meh5.jpg); background-position-y: bottom;">
+                    <div class="sliders" style="background-image: url(images/meh5.jpg); background-position-y: bottom;">
                         <div class="two-text-slider-two" >
                             <h1>Experimental Evolution</h1>
                             <h2>(2000s)</h2>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="slider-container">
-                    <div class="sliders" style="background-image: url(../images/meh6.jpg); background-position-y: bottom;">
+                    <div class="sliders" style="background-image: url(images/meh6.jpg); background-position-y: bottom;">
                         <div class="two-text-slider-two" >
                             <h1>Minimalistic</h1>
                             <h2>(2010s-Present)</h2>
