--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
             <div class="footer">
                 <h3><span style="font-family: Gotham-Bold;">Dan Warnick </span></br>
-                    DES 070</br>
+                    Lehigh University</br>
                     Spring 2024</h3>
             </div>
         </div>      
